@1329 Work on cleanup and correctness.